# ai-on-eks

./: .gitignore  citymapper-mcp-blueprint.patch  citymapper-multi-agent.patch  citymapper-observability-clean.patch
blueprints/agentic/multi-agent-strands-bedrock/: .env.example  .gitignore  CITYMAPPER_INTEGRATION.md  DEPLOYMENT.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  deploy-eks.sh  deploy-multi-agent.sh  docker-compose-observability.yml  docker-compose.yml  setup-local-observability.sh  test-observability-e2e.sh  test_multi_agent.py
blueprints/agentic/multi-agent-strands-bedrock/citymapper/: DEPLOYMENT.md  Dockerfile  README.md  agent.md  agent.py  agent_a2a_server.py  agent_config.py  agent_fastapi.py  agent_interactive.py  agent_mcp_server.py  agent_state_manager.py  deploy-docker-compose.sh  docker-compose.yml  main.py  mcp.json  observability.py  pyproject.toml  requirements.txt  simple_langfuse_test.py  test_complete_observability.py  test_e2e_a2a.py  test_e2e_fastapi_curl.sh  test_e2e_mcp.py  test_integration.py  test_langfuse_integration.py  test_observability.py  test_ragas_bedrock.py  working_langfuse_test.py
blueprints/agentic/multi-agent-strands-bedrock/citymapper/helm/: Chart.yaml  values.yaml
blueprints/agentic/multi-agent-strands-bedrock/citymapper/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
blueprints/agentic/multi-agent-strands-bedrock/citymapper/mcp-servers/activities-mcp-server/: Dockerfile  README.md  activities_data.json  observability_wrapper.py  pyproject.toml  server.py
blueprints/agentic/multi-agent-strands-bedrock/citymapper/mcp-servers/mapper-mcp-server/: README.md  pyproject.toml  server.py
blueprints/agentic/multi-agent-strands-bedrock/images/: architecture.drawio
blueprints/agentic/multi-agent-strands-bedrock/langfuse/: README.md  deploy-langfuse.sh  langfuse-values.yaml
blueprints/agentic/multi-agent-strands-bedrock/orchestrator/: Dockerfile  README.md  a2a_agent.py  agent_fastapi.py  system.md
blueprints/agentic/multi-agent-strands-bedrock/terraform/: dynamodb.tf  main.tf  outputs.tf  podidentity.tf  prep-env-weather-agent.sh  prep-env-weather-web.sh  (+1 more)
blueprints/citymapper-mcp/: README.md  docker-compose.yml  requirements.txt
blueprints/citymapper-mcp/dynamo/: migrate_data_to_dynamodb.py  setup_dynamodb.py  test_dynamodb_integration.py
blueprints/citymapper-mcp/scripts/: interactive_travel_planner.py
(+73 files in other folders)
